03-App/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jenkins.getup.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
